Fixed DateTime, TimeSpan, DateTimeOffset, Nested Objects

--- a/src/Magnum.Web.Specs/Magnum.Web.Specs.csproj
+++ b/src/Magnum.Web.Specs/Magnum.Web.Specs.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Binding_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestModelBinderContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Magnum.TestFramework\Magnum.TestFramework.csproj">
