--- a/src/Magnum.Web/Magnum.Web.csproj
+++ b/src/Magnum.Web/Magnum.Web.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Binding\FastModelBinder.cs" />
     <Compile Include="Binding\ModelBinderContext.cs" />
     <Compile Include="Binding\ObjectPropertyBinder.cs" />
-    <Compile Include="Binding\FastBinderContext.cs" />
+    <Compile Include="Binding\InstanceBinderContext.cs" />
     <Compile Include="Binding\ExtensionsForType.cs" />
     <Compile Include="Binding\BinderContext.cs" />
     <Compile Include="Binding\ObjectBinder.cs" />
