--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -123,7 +123,6 @@
     <Compile Include="Channels\FilterChannel.cs" />
     <Compile Include="Channels\ThreadStaticChannelProvider.cs" />
     <Compile Include="Check.cs" />
-    <Compile Include="CollectionExtensions\ComparerExtensions.cs" />
     <Compile Include="Collections\Algorithms.cs" />
     <Compile Include="Collections\Bag.cs" />
     <Compile Include="Collections\BigList.cs" />
@@ -209,12 +208,14 @@
     <Compile Include="Data\NullUnitOfWork.cs" />
     <Compile Include="Data\ITransaction.cs" />
     <Compile Include="Data\UnitOfWork.cs" />
-    <Compile Include="DateTimeExtensions\DateTimeExtensions.cs" />
-    <Compile Include="CollectionExtensions\DictionaryExtensions.cs" />
+    <Compile Include="Extensions\ExtensionsToDateTime.cs" />
+    <Compile Include="Extensions\ExtensionsToDictionary.cs" />
     <Compile Include="EventStreamProcessing\ObjectParser.cs" />
     <Compile Include="EventStreamProcessing\Parser.cs" />
     <Compile Include="EventStreamProcessing\PatternBasedObjectParser.cs" />
     <Compile Include="EventStreamProcessing\Result.cs" />
+    <Compile Include="Extensions\ExtensionsToIntX.cs" />
+    <Compile Include="Extensions\ExtensionsToString.cs" />
     <Compile Include="Graphing\Edge.cs" />
     <Compile Include="Graphing\Vertex.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
@@ -368,7 +369,7 @@
     <Compile Include="Data\InMemoryRepository.cs" />
     <Compile Include="ReverseComparer.cs" />
     <Compile Include="FunctionTimer.cs" />
-    <Compile Include="DateTimeExtensions\TimeSpanExtensions.cs" />
+    <Compile Include="Extensions\ExtensionsToTimeSpan.cs" />
     <Compile Include="StateMachine\StateMachineException.cs" />
     <Compile Include="StateMachine\StateMachineExpressionInspector.cs" />
     <Compile Include="StateMachine\GraphStateMachineVisitor.cs" />
