--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -213,7 +213,10 @@
     <Compile Include="EventStreamProcessing\Parser.cs" />
     <Compile Include="EventStreamProcessing\PatternBasedObjectParser.cs" />
     <Compile Include="EventStreamProcessing\Result.cs" />
+    <Compile Include="Extensions\ExtensionsToEnumerable.cs" />
+    <Compile Include="Extensions\ExtensionsToExpression.cs" />
     <Compile Include="Extensions\ExtensionsToIntX.cs" />
+    <Compile Include="Extensions\ExtensionsToObject.cs" />
     <Compile Include="Extensions\ExtensionsToString.cs" />
     <Compile Include="Graphing\Edge.cs" />
     <Compile Include="Graphing\Vertex.cs" />
