--- a/src/Magnum.Web/Magnum.Web.csproj
+++ b/src/Magnum.Web/Magnum.Web.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -100,6 +101,7 @@
     <Compile Include="Binding\TypeBinders\UShortBinder.cs" />
     <Compile Include="Actors\ObjectResponseChannel.cs" />
     <Compile Include="Binding\TypeBinders\ValueTypeBinder.cs" />
+    <Compile Include="Security\SecureSessionHttpModule.cs" />
     <Compile Include="ValueProviders\AccessorValueProvider.cs" />
     <Compile Include="ValueProviders\DictionaryValueProvider.cs" />
     <Compile Include="ValueProviders\ExtensionsForValueProviders.cs" />
