--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -212,10 +212,13 @@
     <Compile Include="EventStreamProcessing\Parser.cs" />
     <Compile Include="EventStreamProcessing\PatternBasedObjectParser.cs" />
     <Compile Include="EventStreamProcessing\Result.cs" />
+    <Compile Include="Extensions\ExtensionsToDisposable.cs" />
     <Compile Include="Extensions\ExtensionsToEnumerable.cs" />
+    <Compile Include="Extensions\ExtensionsToEventHandler.cs" />
     <Compile Include="Extensions\ExtensionsToExpression.cs" />
     <Compile Include="Extensions\ExtensionsToIntX.cs" />
     <Compile Include="Extensions\ExtensionsToObject.cs" />
+    <Compile Include="Extensions\ExtensionsToRange.cs" />
     <Compile Include="Extensions\ExtensionsToString.cs" />
     <Compile Include="Graphing\Edge.cs" />
     <Compile Include="Graphing\Vertex.cs" />
@@ -282,7 +285,6 @@
     <Compile Include="Monads\Parser\MonadParserExtensions.cs" />
     <Compile Include="Monads\Parser\Parser.cs" />
     <Compile Include="Monads\Parser\Result.cs" />
-    <Compile Include="ObjectExtensions\EventHandlerExtensions.cs" />
     <Compile Include="Collections\Cache.cs" />
     <Compile Include="Parsers\RangeElement.cs" />
     <Compile Include="Parsers\ExtensionsToRangeParser.cs" />
@@ -313,7 +315,6 @@
     <Compile Include="Pipeline\SegmentUnbinder.cs" />
     <Compile Include="Pipeline\SubscriptionScope.cs" />
     <Compile Include="Pipeline\Visitors\ClonePipelineVisitor.cs" />
-    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Pipeline\Segments\EndSegment.cs" />
     <Compile Include="Pipeline\Segments\FilterSegment.cs" />
     <Compile Include="Pipeline\Segments\InputSegment.cs" />
@@ -359,7 +360,6 @@
     <Compile Include="Data\IAggregateRoot.cs" />
     <Compile Include="Data\IRepositoryFactory.cs" />
     <Compile Include="LinkedComparer.cs" />
-    <Compile Include="ObjectExtensions\ObjectExtensions.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="RangeBuilder.cs" />
     <Compile Include="RangeEnumerator.cs" />
