Ensuring high concurrency without locking

--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Actions\ActionQueue_Specs.cs" />
     <Compile Include="Actions\ActionScheduler_Specs.cs" />
+    <Compile Include="Actions\LoopbackAction_Specs.cs" />
     <Compile Include="Actors\Calculator_Example.cs" />
     <Compile Include="Actors\Channel_Specs.cs" />
     <Compile Include="Actors\CommandQueue_Specs.cs" />
