Removed Actors namespace

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -58,32 +58,6 @@
     <Compile Include="Actions\ThreadActionQueue.cs" />
     <Compile Include="Actions\ThreadPoolActionQueue.cs" />
     <Compile Include="Actions\TimerActionScheduler.cs" />
-    <Compile Include="Actors\Actor.cs" />
-    <Compile Include="Actors\AsyncActor.cs" />
-    <Compile Include="Actors\ChannelFactory.cs" />
-    <Compile Include="Actors\Channels\Channel.cs" />
-    <Compile Include="Actors\Channels\Extensions.cs" />
-    <Compile Include="Actors\Channels\Subscribers\ChannelSubscriber.cs" />
-    <Compile Include="Actors\Channels\Subscribers\DistinctIntervalSubscriber.cs" />
-    <Compile Include="Actors\Channels\Subscribers\FilteredSubscriber.cs" />
-    <Compile Include="Actors\Channels\Subscribers\IntervalSubscriber.cs" />
-    <Compile Include="Actors\Channels\Subscribers\LatestIntervalSubscriber.cs" />
-    <Compile Include="Actors\Channels\Subscribers\SubscriberBase.cs" />
-    <Compile Include="Actors\Channels\SynchronousChannel.cs" />
-    <Compile Include="Actors\CommandQueue.cs" />
-    <Compile Include="Actors\CommandQueues\AsyncCommandQueue.cs" />
-    <Compile Include="Actors\CommandQueues\SynchronousCommandQueue.cs" />
-    <Compile Include="Actors\CommandQueues\ThreadCommandQueue.cs" />
-    <Compile Include="Actors\CommandQueues\ThreadPoolCommandQueue.cs" />
-    <Compile Include="Actors\Exceptions\QueueFullException.cs" />
-    <Compile Include="Actors\Future.cs" />
-    <Compile Include="Actors\Scheduler.cs" />
-    <Compile Include="Actors\Schedulers\EventBase.cs" />
-    <Compile Include="Actors\Schedulers\RecurringEvent.cs" />
-    <Compile Include="Actors\Schedulers\ScheduledEvent.cs" />
-    <Compile Include="Actors\Schedulers\SingleEvent.cs" />
-    <Compile Include="Actors\Schedulers\ThreadPoolScheduler.cs" />
-    <Compile Include="Actors\Startable.cs" />
     <Compile Include="Calendar\CheckResult.cs" />
     <Compile Include="Calendar\Holidays\BaseCheck.cs" />
     <Compile Include="Calendar\Holidays\ChristmasDayCheck.cs" />
@@ -110,6 +84,7 @@
     <Compile Include="Channels\Consumer.cs" />
     <Compile Include="Channels\ChannelProvider.cs" />
     <Compile Include="Channels\DelegateChannelProvider.cs" />
+    <Compile Include="Channels\Future.cs" />
     <Compile Include="Channels\Interceptor.cs" />
     <Compile Include="Channels\InterceptorChannel.cs" />
     <Compile Include="Channels\InterceptorProvider.cs" />
@@ -127,6 +102,7 @@
     <Compile Include="Channels\FilterChannel.cs" />
     <Compile Include="Channels\PublishSubscribeChannel.cs" />
     <Compile Include="Channels\SynchronizedChannel.cs" />
+    <Compile Include="Channels\ThreadPoolChannel.cs" />
     <Compile Include="Channels\ThreadStaticChannelProvider.cs" />
     <Compile Include="Channels\TranformChannel.cs" />
     <Compile Include="Collections\Algorithms.cs" />
