--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -57,7 +57,6 @@
     <Compile Include="Actions\LoopbackAction_Specs.cs" />
     <Compile Include="Actors\Calculator_Example.cs" />
     <Compile Include="Actors\Channel_Specs.cs" />
-    <Compile Include="Actors\CommandQueue_Specs.cs" />
     <Compile Include="Actors\PingPongDemo\Ping.cs" />
     <Compile Include="Actors\PingPongDemo\PingActor.cs" />
     <Compile Include="Actors\PingPongDemo\PingPong_Demo.cs" />
@@ -76,6 +75,7 @@
     <Compile Include="Channels\ConsumerPool_Specs.cs" />
     <Compile Include="Channels\Interval_Specs.cs" />
     <Compile Include="Channels\PingPong_Specs.cs" />
+    <Compile Include="Channels\ThreadPoolChannel_Specs.cs" />
     <Compile Include="CommandLineParser\PlugInCommands\AddFileCommand.cs" />
     <Compile Include="CommandLineParser\PlugInCommands\AddRemoteRepositoryCommand.cs" />
     <Compile Include="CommandLineParser\PlugInCommands\LinqSpecification_Specs.cs" />
