--- a/src/Sample.WebActors/Sample.WebActors.csproj
+++ b/src/Sample.WebActors/Sample.WebActors.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\Asynchro\AsynchroController.cs" />
     <Compile Include="Controllers\Asynchro\AsynchroIndexViewModel.cs" />
+    <Compile Include="Controllers\BenchmarkController.cs" />
     <Compile Include="Controllers\TestEcho\TestEchoController.cs" />
     <Compile Include="Controllers\TestEcho\TestEchoViewModel.cs" />
     <Compile Include="Controllers\TraceController.cs" />
@@ -76,6 +77,7 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Views\Asynchro\Index.aspx" />
+    <Content Include="Views\Benchmark\Index.aspx" />
     <Content Include="Views\TestEcho\Index.aspx" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.4.1.js" />
