Actors coming along

--- a/src/Magnum.Web/Magnum.Web.csproj
+++ b/src/Magnum.Web/Magnum.Web.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Actors\ActorHttpAsyncHandler.cs" />
     <Compile Include="Actors\ActorRequestContext.cs" />
     <Compile Include="Actors\ActorRouteBuilder.cs" />
+    <Compile Include="Actors\ActorRouteGenerator.cs" />
     <Compile Include="Actors\ActorRouteHandler.cs" />
     <Compile Include="Actors\BasicActorBinder.cs" />
     <Compile Include="Abstractions\HttpResponseContentWriter.cs" />
