--- a/src/Magnum.Web.Specs/Magnum.Web.Specs.csproj
+++ b/src/Magnum.Web.Specs/Magnum.Web.Specs.csproj
@@ -44,11 +44,15 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Web.Routing">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binding_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Routing_Specs.cs" />
     <Compile Include="TestModelBinderContext.cs" />
   </ItemGroup>
   <ItemGroup>
