--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -45,14 +45,14 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
-    <Compile Include="Channels\AddChannelBinder.cs" />
-    <Compile Include="Channels\BinderScope.cs" />
+    <Compile Include="Channels\Internal\AddChannelBinder.cs" />
+    <Compile Include="Channels\Internal\BinderScope.cs" />
     <Compile Include="Channels\ChannelAdapter.cs" />
-    <Compile Include="Channels\ChannelBinderScope.cs" />
+    <Compile Include="Channels\Internal\ChannelBinderScope.cs" />
     <Compile Include="Channels\ChannelRouter.cs" />
     <Compile Include="Channels\ExtensionsForChannels.cs" />
     <Compile Include="Channels\MessageConverter.cs" />
-    <Compile Include="Channels\RemoveChannelBinder.cs" />
+    <Compile Include="Channels\Internal\RemoveChannelBinder.cs" />
     <Compile Include="Channels\SelectiveConsumer.cs" />
     <Compile Include="Channels\DefaultMailbox.cs" />
     <Compile Include="Channels\Mailbox.cs" />
@@ -60,6 +60,7 @@
     <Compile Include="Channels\SendException.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\SubscriberSendException.cs" />
+    <Compile Include="Channels\TraceChannelVisitor.cs" />
     <Compile Include="Channels\UntypedChannel.cs" />
     <Compile Include="Fibers\Internal\AbstractFiber.cs" />
     <Compile Include="Fibers\Fiber.cs" />
