--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -85,20 +85,23 @@
     <Compile Include="Binding\TypeBinders\UriBinder.cs" />
     <Compile Include="Binding\TypeBinders\UShortBinder.cs" />
     <Compile Include="Binding\TypeBinders\ValueTypeBinder.cs" />
-    <Compile Include="Channels\Internal\AddChannelBinder.cs" />
-    <Compile Include="Channels\Internal\BinderScope.cs" />
+    <Compile Include="Channels\Internal\AddChannelSubscriber.cs" />
+    <Compile Include="Channels\Internal\ChannelSubscription.cs" />
     <Compile Include="Channels\ChannelAdapter.cs" />
-    <Compile Include="Channels\Internal\ChannelBinderScope.cs" />
-    <Compile Include="Channels\ChannelRouter.cs" />
+    <Compile Include="Channels\Internal\TypedChannelSubscription.cs" />
+    <Compile Include="Channels\Internal\UntypedChannelSubscription.cs" />
+    <Compile Include="Channels\UntypedChannelAdapter.cs" />
+    <Compile Include="Channels\UntypedChannelRouter.cs" />
     <Compile Include="Channels\ExtensionsForChannels.cs" />
     <Compile Include="Channels\MessageConverter.cs" />
-    <Compile Include="Channels\Internal\RemoveChannelBinder.cs" />
+    <Compile Include="Channels\Internal\RemoveChannelSubscribers.cs" />
     <Compile Include="Channels\SelectiveConsumer.cs" />
     <Compile Include="Channels\DefaultMailbox.cs" />
     <Compile Include="Channels\Mailbox.cs" />
     <Compile Include="Channels\RequestResponseChannel.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\TraceChannelVisitor.cs" />
+    <Compile Include="Channels\TypedChannelAdapter.cs" />
     <Compile Include="Channels\UntypedChannel.cs" />
     <Compile Include="Fibers\Internal\AbstractFiber.cs" />
     <Compile Include="Fibers\Fiber.cs" />
