Subscriptions are closer to working, unsubscribe is not clean yet

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -86,12 +86,19 @@
     <Compile Include="Binding\TypeBinders\UShortBinder.cs" />
     <Compile Include="Binding\TypeBinders\ValueTypeBinder.cs" />
     <Compile Include="Channels\ChannelSubscription.cs" />
+    <Compile Include="Channels\Internal\AbstractChannelSubscriptionConfigurator.cs" />
     <Compile Include="Channels\Internal\AddChannelSubscriber.cs" />
+    <Compile Include="Channels\Internal\ConsumerConfigurator.cs" />
+    <Compile Include="Channels\Internal\ConsumerConfiguratorImpl.cs" />
     <Compile Include="Channels\Internal\SubscriptionConfigurator.cs" />
     <Compile Include="Channels\ChannelAdapter.cs" />
     <Compile Include="Channels\Internal\TypedChannelSubscription.cs" />
+    <Compile Include="Channels\Internal\TypedChannelSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Internal\TypedConfigurator.cs" />
     <Compile Include="Channels\Internal\TypedSubscriptionConfigurator.cs" />
     <Compile Include="Channels\Internal\UntypedChannelSubscription.cs" />
+    <Compile Include="Channels\Internal\UntypedChannelSubscriptionConfigurator.cs" />
+    <Compile Include="Channels\Internal\UntypedConfigurator.cs" />
     <Compile Include="Channels\Internal\UntypedSubscriptionConfigurator.cs" />
     <Compile Include="Channels\UntypedChannelAdapter.cs" />
     <Compile Include="Channels\UntypedChannelRouter.cs" />
